--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/smaginalexander/mesto-react.git",
+  "homepage": "https://smaginalexander.github.io/mesto-react/",
   "name": "mesto_10",
   "version": "0.1.0",
   "private": true,
